--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>Cphayim - Resources</title>
-    <meta name="Keywords" content="Cphayim, Resoures site"/>
+    <title>Cphayim - Repository</title>
+    <link rel="icon" href="img/favicon.png">
+    <meta name="Keywords" content="Cphayim, Resoures site, Repository"/>
     <style type="text/css">
         body {
             margin: 0;
