--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>Cphayim - Repository</title>
-    <link rel="icon" href="img/favicon.png">
-    <meta name="Keywords" content="Cphayim, Resoures site, Repository"/>
+    <link rel="icon" href="favicon.png">
+    <meta name="keywords" content="Cphayim, Resoures site, Repository"/>
     <style type="text/css">
         body {
             margin: 0;
@@ -22,6 +22,9 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <script src="js/index.js" ></script>
+        <script src="static/canvas/binaryRain.min.js" ></script>
+        <script>
+            binaryRain(document.getElementById('canvas'),true);
+        </script>
     </body>
 </html>
